tests/snapshots/nat_tests__compare_nat_3_14.snap
---
source: tests/nat_tests.rs
expression: result
---
S(S(Z)) is less than S(S(S(S(S(Z))))) by L-SuccR {
  S(S(Z)) is less than S(S(S(S(Z)))) by L-SuccR {
    S(S(Z)) is less than S(S(S(Z))) by L-Succ {
    };
  };
};
