tests/snapshots/nat_tests__eval_nat_16.snap
---
source: tests/nat_tests.rs
expression: result
---
(S(S(Z)) + Z) evalto S(S(Z)) by E-Plus {
  S(S(Z)) evalto S(S(Z)) by E-Const {
  };
  Z evalto Z by E-Const {
  };
  S(S(Z)) plus Z is S(S(Z)) by P-Succ {
    S(Z) plus Z is S(Z) by P-Succ {
      Z plus Z is Z by P-Zero {
      };
    };
  };
};
