tests/snapshots/nat_tests__nat_3.snap
---
source: tests/nat_tests.rs
expression: result
---
S(S(Z)) plus Z is S(S(Z)) by P-Succ {
  S(Z) plus Z is S(Z) by P-Succ {
    Z plus Z is Z by P-Zero {
    };
  };
};
