tests/snapshots/nat_tests__nat_6.snap
---
source: tests/nat_tests.rs
expression: result
---
S(S(Z)) times Z is Z by T-Succ {
  S(Z) times Z is Z by T-Succ {
    Z times Z is Z by T-Zero {
    };
    Z plus Z is Z by P-Zero {
    };
  };
  Z plus Z is Z by P-Zero {
  };
};
