tests/snapshots/nat_tests__nat_7.snap
---
source: tests/nat_tests.rs
expression: result
---
S(S(Z)) times S(Z) is S(S(Z)) by T-Succ {
  S(Z) times S(Z) is S(Z) by T-Succ {
    Z times S(Z) is Z by T-Zero {
    };
    S(Z) plus Z is S(Z) by P-Succ {
      Z plus Z is Z by P-Zero {
      };
    };
  };
  S(Z) plus S(Z) is S(S(Z)) by P-Succ {
    Z plus S(Z) is S(Z) by P-Zero {
    };
  };
};
