tests/snapshots/nat_tests__reduce_nat_21.snap
---
source: tests/nat_tests.rs
expression: result
---
(Z + S(S(Z))) -*-> S(S(Z)) by MR-One {
  (Z + S(S(Z))) ---> S(S(Z)) by R-Plus {
    Z plus S(S(Z)) is S(S(Z)) by P-Zero {
    };
  };
};
