tests/snapshots/nat_tests__reduce_nat_22.snap
---
source: tests/nat_tests.rs
expression: result
---
((S(Z) * S(Z)) + (S(Z) * S(Z))) -d-> (S(Z) + (S(Z) * S(Z))) by DR-PlusL {
  (S(Z) * S(Z)) -d-> S(Z) by DR-Times {
    S(Z) times S(Z) is S(Z) by T-Succ {
      Z times S(Z) is Z by T-Zero {
      };
      S(Z) plus Z is S(Z) by P-Succ {
        Z plus Z is Z by P-Zero {
        };
      };
    };
  };
};
