tests/snapshots/nat_tests__reduce_nat_23.snap
---
source: tests/nat_tests.rs
expression: result
---
((S(Z) * S(Z)) + (S(Z) * S(Z))) ---> ((S(Z) * S(Z)) + S(Z)) by R-PlusR {
  (S(Z) * S(Z)) ---> S(Z) by R-Times {
    S(Z) times S(Z) is S(Z) by T-Succ {
      Z times S(Z) is Z by T-Zero {
      };
      S(Z) plus Z is S(Z) by P-Succ {
        Z plus Z is Z by P-Zero {
        };
      };
    };
  };
};
